Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Wed Apr 24 00:14:04 BST 2002	Riley Williams <Riley@Williams.Name>

	* ANSI'fied function prototypes in the arch/i86/drivers/block subtree.
	* Applied `make indent` rule to the arch/i86/drivers/block subtree.
	* Verified that the kernel compiles with the above changes applied.

Tue Apr 23 17:27:03 BST 2002	Riley Williams <Riley@Williams.Name>

	* ANSI'fied function prototypes in the arch/i86/drivers/char subtree.
	* Applied `make indent` rule to the arch/i86/drivers/char subtree.
	* Verified that the kernel compiles with the above changes applied.

Tue Apr 23 16:35:53 BST 2002	Riley Williams <Riley@Williams.Name>

	* Simplified keyboard keycodes to auto-include all keycode header
	  files currently defined. With this change, the ONLY steps needed
	  to add another keycode table is to drop the relevant header file
	  in the arch/i86/drivers/char/KeyMaps/ directory, with the correct
	  comment line at the top, and the keymap will be included both in
	  the configuration system and in the code itself. Also, if the map
	  is for more than one language and a separate copy of this comment
	  line is provided for each language, then all language options are
	  automatically included, as currently happens with the BE/FR file.
	* Updated TODO document.

Tue Apr 23 01:27:03 BST 2002	Riley Williams <Riley@Williams.Name>

	* ANSI'fied function prototypes in the arch/i86/sibo subtree.
	* Applied `make indent` rule to the arch/i86/sibo subtree.
	* ANSI'fied function prototypes in the arch/i86/tools subtree.
	* Applied `make indent` rule to the arch/i86/tools subtree.